# Munimji.ai

./: .gitignore  App.tsx  Procfile  TEACHNICAL.md  extract_test.py  image_ocr_model.py  index.html  main.py  metadata.json  package-lock.json  package.json  readme.md  render.yaml  requirements.txt  start-dev.sh  start_backend.sh  vite.config.ts
backend/: alembic.ini  app.py  image_ocr_model.py  intent_test.py  pyproject.toml  requirements-dashboard.txt  requirements.txt  test_call.py  test_graph.py
backend/agents/: graph.py  state.py
backend/agents/nodes/: add_entry.py  classify.py  extract.py  guardrails.py  respond.py  router.py  search_notes.py  slot_check.py  (+1 more)
backend/bench-results/: after.json  baseline.json  live_test.json
backend/chatbot_backend/: __init__.py  app.py
backend/dashbaord/: __init__.py  app.py  models.py  routes.py
backend/dashboard/: app.py  models.py  routes.py  schemas.py  seed.py
backend/decorators/: __init__.py  timeit.py
backend/llm/: __init__.py  groq_client.py  llm_cache.py  prompts.py
backend/munimji-indicbert/: database.py  main.py  model_loader.py  models.py  requirement.txt
backend/scripts/: seed_demo_data.py
backend/tests/: test_complete_workflow.py  test_e2e_conversation.py  test_media_processing.py  test_multi_turn.py  test_optimizations.py
backend/tools/: test_optimizations.py
backend/twilio_voice_webhook/: app.py
backend/vectorstore/: db_vector.py  embeddings.py  search.py
backend/whatsapp/: __init__.py  app.py  audio_processor.py  chatbot.py  config.py  handlers.py  image_processor.py  media.py  utils.py
(+65 files in other folders)
