[project]
name = "munimji"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.7",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=3.0.3",
    "langgraph>=1.0.3",
    "python-dotenv>=1.2.1",
    "streamlit>=1.51.0",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "aiofiles>=23.1.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.6",
    "pgvector>=0.2.4",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    "langchain-community>=0.0.0",
    "langchain-huggingface>=0.0.3",
    "langchain-postgres>=0.0.0",
    "sentence-transformers>=2.2.2",
    "groq>=0.9.0",
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
    "transformers>=4.21.0",
    "twilio>=9.8.7",
    "dotenv>=0.9.9",
]

[project.scripts]
streamlit-app = "streamlit:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
